@@ -1732,6 +1732,7 @@ void
 quit_force (char *args, int from_tty)
 {
   int exit_code = 0;
+  struct qt_args qt;
 
   /* An optional expression may be used to cause gdb to terminate with the 
      value of that expression. */
@@ -1742,8 +1743,11 @@ quit_force (char *args, int from_tty)
       exit_code = (int) value_as_long (val);
     }
 
+  qt.args = args;
+  qt.from_tty = from_tty;
+
   /* We want to handle any quit errors and exit regardless.  */
-  catch_errors (quit_target, args,
+  catch_errors (quit_target, &qt,
 	        "Quitting: ", RETURN_MASK_ALL);
 
   exit (exit_code);
